--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,11 @@
     height: 500px;
     overflow-y: scroll;
     padding: 5px;
-    border: none;
     font-size: 16px;
     background: transparent;
     font-family: georgia, serif;
+    border: 1px dashed #999;
+    border-right: none;
 }
 
 .App textarea:focus {
@@ -35,6 +36,9 @@
     height: 500px;
     overflow-y: scroll;
     padding: 5px 0 0 30px;
+    border: 1px dashed #999;
+    border-left: none;
+    border-right: none;
 }
 
 @media only screen and (max-device-width: 768px) {
@@ -62,9 +66,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #888;
-    -webkit-border-radius: 1ex;
-    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+    background: #999;
 }
 
 .App footer {
