--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Quicksand', sans-serif;
-    background: url(http://www.ommwriter.com/images/fondos_omm/fondo_1.jpg) repeat-x fixed 50% 0 transparent;
+    background: url(./bg.png) repeat-x center;
 }
